deploy/base/admin-portal/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: admin-portal
  namespace: admin-portal
spec:
  selector: { app: admin-portal }
  ports:
    - port: 8080
      targetPort: 8080
